--- a/github.html
+++ b/github.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <!-- 网站品牌/Logo -->
         <div class="nav-brand">
-            <a href="index.html">Sanuei</a>
+            <a href="index.html">Yan_Sanuei</a>
         </div>
         <!-- 移动端菜单按钮 -->
         <div class="nav-toggle" id="navToggle">
@@ -29,6 +29,16 @@
             <li><a href="resume.html">简历</a></li>
             <li><a href="projects.html">项目</a></li>
             <li><a href="github.html">GitHub</a></li>
+            <li class="language-dropdown">
+                <a href="#" class="language-btn">
+                    <i class="fas fa-globe"></i>
+                </a>
+                <div class="language-menu">
+                    <a href="#" data-lang="zh" class="active">中文</a>
+                    <a href="#" data-lang="en">English</a>
+                    <a href="#" data-lang="ja">日本語</a>
+                </div>
+            </li>
         </ul>
     </nav>
 
@@ -36,11 +46,34 @@
     <main class="github-container">
         <!-- GitHub个人资料部分 -->
         <section class="github-header">
-            <!-- 个人资料卡片 - 由JavaScript动态填充 -->
-            <div class="github-profile" id="profile">
-                <!-- 加载动画 -->
-                <div class="profile-loading">
-                    <i class="fas fa-spinner fa-spin"></i>
+            <div class="github-profile">
+                <div class="profile-main">
+                    <div class="profile-avatar">
+                        <img src="https://avatars.githubusercontent.com/sanuei" alt="Profile Avatar">
+                    </div>
+                    <div class="profile-info">
+                        <h1 data-i18n="githubName">Yan Sanuei</h1>
+                        <p class="profile-bio" data-i18n="githubBio">Full Stack Developer | Open Source Enthusiast</p>
+                        <div class="profile-details">
+                            <span><i class="fas fa-map-marker-alt"></i> Tokyo, Japan</span>
+                            <span><i class="fas fa-building"></i> @名川ネットワーク</span>
+                            <span><i class="fas fa-link"></i> <a href="https://sanuei.com">sanuei.com</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-stats">
+                    <div class="stat">
+                        <span class="stat-number" id="followers">-</span>
+                        <span class="stat-label" data-i18n="followers">Followers</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number" id="following">-</span>
+                        <span class="stat-label" data-i18n="following">Following</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number" id="publicRepos">-</span>
+                        <span class="stat-label" data-i18n="repositories">Repositories</span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -51,19 +84,19 @@
                 <!-- 仓库数量卡片 -->
                 <div class="stat-card">
                     <i class="fas fa-code-branch"></i>
-                    <h3>仓库数量</h3>
+                    <h3 data-i18n="repositories">仓库数量</h3>
                     <p id="repoCount">-</p>
                 </div>
                 <!-- 获得星标数卡片 -->
                 <div class="stat-card">
                     <i class="fas fa-star"></i>
-                    <h3>获得星标</h3>
+                    <h3 data-i18n="stars">获得星标</h3>
                     <p id="totalStars">-</p>
                 </div>
                 <!-- 主要编程语言卡片 -->
                 <div class="stat-card">
                     <i class="fas fa-code"></i>
-                    <h3>主要语言</h3>
+                    <h3 data-i18n="mainLanguage">主要语言</h3>
                     <p id="topLanguage">-</p>
                 </div>
             </div>
@@ -71,7 +104,7 @@
 
         <!-- 仓库展示区域 -->
         <section class="repositories">
-            <h2>热门仓库</h2>
+            <h2 data-i18n="popularRepos">热门仓库</h2>
             <!-- 仓库网格 - 由JavaScript动态填充 -->
             <div class="repo-grid" id="repoGrid">
                 <!-- 加载动画 -->
@@ -87,9 +120,10 @@
     <footer>
         <!-- 社交媒体链接 -->
         <div class="social-links">
-            <a href="https://github.com/sanuei" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/Sanuei" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+            <a href="https://www.youtube.com/@sonicyann" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/sonic_yann/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/yngshngwi6" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
         </div>
         <!-- 版权信息 -->
         <p>&copy; 2024 Sanuei. All rights reserved.</p>
@@ -99,5 +133,7 @@
     <script src="js/main.js"></script>
     <!-- GitHub API 集成脚本 -->
     <script src="js/github.js"></script>
+    <!-- 语言切换脚本 -->
+    <script src="js/i18n.js"></script>
 </body>
 </html> 
